Fix footer by addin z-index

--- a/src/styles.css
+++ b/src/styles.css
@@ -281,6 +281,7 @@ svg {
   background-color: var(--clr-bg-bento-light);
   position: relative;
   bottom: 0;
+  z-index: 1;
   will-change: transform;
 
   & .footer-content {
